OO-4427: prevent the toggle button to obscure question on mobile devices

--- a/src/main/webapp/static/themes/light/modules/_qti21.scss
+++ b/src/main/webapp/static/themes/light/modules/_qti21.scss
@@ -272,6 +272,11 @@ img.o_hotspot_responsive[usemap] {
 	}
 }
 
+/* prevent the toggle to obscure the title of the question */
+#o_main_wrapper #o_main_container #o_qti_run #o_main_left #o_main_left_toggle {
+	top : 50px;
+}
+
 #o_qti_results_infos {
 	border: 1px solid $o-qti-run-infos-border-color;
 	border-radius: $o-qti-run-infos-border-radius;
